<resources>
    <string name="register_modify">등록 / 수정</string>
    <string name="register_cafe">카페 등록하기</string>
    <string name="wait_for_your_cafe">10명의 손님이 당신의 카페를 기다리고있어요!</string>
    <string name="register_cafe_information">1. 카페의 기본정보를 등록해주세요 (1/3)</string>
    <string name="cafe_address">카페 주소</string>
    <string name="star">*</string>
    <string name="search_address">주소 검색</string>
    <string name="trade_name">상호명</string>
    <string name="eg_trade_name">예) 컴포즈 석사점</string>
    <string name="phone_number">전화번호</string>
    <string name="eg_phone_number">010 - 0000 - 0000</string>
    <string name="cafe_main_photo">카페 대표사진</string>
    <string name="hint_upload_photos">tip. 자리, 카페 분위기, 대표 메뉴 사진 등을 올려보세요</string>
    <string name="cafe_detail_info">카페 상세 정보</string>
    <string name="wifi">WI-FI</string>
    <string name="charging_outlets">충전 콘센트</string>
    <string name="kids_zone">키즈존</string>
    <string name="pets_allowed">애견동반</string>
    <string name="cafe_additional_info">카페 추가 안내 사항</string>
    <string name="eg_cafe_addi_info">예) 저희 카페는 1인 1음료를 꼭 시켜주셔야해요! 😊</string>
    <string name="register_business_hours">영업시간 등록하기\t\t\t\t></string>
    <string name="register_floor_plan">카페 도면 등록하기\t\t\t\t></string>
    <string name="o">O</string>
    <string name="x">X</string>
    <string name="register_cafe_business_hours">2. 카페의 영업시간을 알려주세요(2/3)</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="eg_start_hour">09:00</string>
    <string name="eg_end_hour">18:30</string>
    <string name="tilde">~</string>
    <string name="register_cafe_floor_plan">3. 카페의 도면을 등록해주세요(3/3)</string>
    <string name="complete_modification">수정완료</string>
    <string name="modify_business_hours">영업시간 수정\t\t></string>
    <string name="modify_floor_plan">좌석 도면 수정\t\t\t\t></string>
    <string name="modify_cafe_basic_info">카페 기본정보 수정</string>
    <string name="modify_cafe_business_hours">카페 영업시간 수정</string>
    <string name="my_cafe">나의 카페</string>
    <string name="store_number">매장번호</string>
    <string name="modify">수정</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>