<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gs_1"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".AdminModifyFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/my_cafe"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cafe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_extralight"
        android:text="컴포즈커피 춘천점"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/modify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/brown_button"
        android:fontFamily="@font/pretendard_bold"
        android:padding="10dp"
        android:text="@string/modify"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_marginTop="5dp"
        android:background="@color/gs_3"
        app:layout_constraintTop_toBottomOf="@id/cafe_name" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_sc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- 카페명 -->
            <TextView
                android:id="@+id/tvStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="컴포즈커피 춘천점"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- 카페 주소 -->
            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="강원도 춘천시 중앙로 1가 1-16"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <!-- 영업상태 + 매장상태 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBusinessStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="영업중"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBusinessHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text=" 22:00까지"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- 매장번호 + 좌석확인 버튼 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPhoneNumberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_number"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="033-255-1234"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- 별점 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tvScoreIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="Star Icon"
                    android:src="@drawable/ic_score" />

                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="4.5"
                    android:textColor="@color/gray_light" />
            </LinearLayout>

            <!-- 카페 이미지 RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCafeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="recycler view of cafe images"
                android:padding="5dp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/tab_bg"
                android:contentDescription="tab layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nested_sc"
                app:tabIndicatorColor="@color/brown"
                app:tabSelectedTextColor="@color/brown"
                app:tabTextColor="@color/brown" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@id/tab_layout" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>